--- a/www/templates/discover.html
+++ b/www/templates/discover.html
@@ -24,6 +24,10 @@
         </a>
       </div>
 
+      <div class="img-lookahead">
+        <img ng-src="{{ nextAlbumImg() }}" />
+      </div>
+
     </div>
 
 
